# vitreous

./: CHANGELOG.md  Cargo.toml  design.md  index.md  phase-0-workspace-scaffold.md  phase-1a-reactive.md  phase-1b-style.md  phase-1c-events.md  phase-2a-accessibility.md  phase-2b-layout.md  phase-3-widgets.md  phase-4a-render.md  phase-4b-web.md  phase-5-platform.md  phase-6-facade-examples.md  phase-7-hot-reload-cli.md  vitreous-architecture.md
.crosslink/: hook-config.json
.design/: phase-0-workspace-scaffold.md  phase-0-workspace-scaffold.pipeline.json  phase-1a-reactive.md  phase-1a-reactive.pipeline.json  phase-1b-style.md  phase-1b-style.pipeline.json  phase-1c-events.md  phase-1c-events.pipeline.json  phase-2a-accessibility.md  phase-2a-accessibility.pipeline.json  phase-2b-layout.md  phase-2b-layout.pipeline.json  phase-3-widgets.md  phase-3-widgets.pipeline.json  phase-4a-render.md  phase-4a-render.pipeline.json  phase-4b-web.md  phase-4b-web.pipeline.json  phase-5-platform.md  phase-5-platform.pipeline.json  phase-6-facade-examples.md  phase-6-facade-examples.pipeline.json  phase-7-hot-reload-cli.md  phase-7-hot-reload-cli.pipeline.json  vitreous-architecture.md  vitreous-architecture.pipeline.json
checkpoint/: state.json
crates/vitreous/: Cargo.toml
crates/vitreous/src/: lib.rs
crates/vitreous_a11y/: Cargo.toml
crates/vitreous_events/: Cargo.toml
crates/vitreous_hot_reload/: Cargo.toml
crates/vitreous_hot_reload/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/vitreous_layout/: Cargo.toml
crates/vitreous_platform/: Cargo.toml
crates/vitreous_platform/src/: clipboard.rs  dialogs.rs  event_loop.rs  gpu.rs  lib.rs  system_info.rs  text_engine.rs  window.rs
crates/vitreous_reactive/: Cargo.toml
crates/vitreous_render/: Cargo.toml
crates/vitreous_style/: Cargo.toml
crates/vitreous_web/: Cargo.toml
crates/vitreous_web/src/: aria.rs  dom.rs  events.rs  lib.rs  mount.rs  styles.rs  web_apis.rs
crates/vitreous_widgets/: Cargo.toml
examples/counter/: Cargo.toml
examples/dashboard/: Cargo.toml
examples/file_explorer/: Cargo.toml
examples/kitchen_sink/: Cargo.toml
examples/todo/: Cargo.toml
heartbeats/: design-phase-1a-reactive--695956.json  design-phase-1b-style-md-c138.json  design-phase-1c-events-md-055e.json  design-phase-2a-accessibility-md-d5c6.json  design-phase-2b-layout-md-7617.json  driver--design-phase-0-workspace-scaffold-md-1136.json  driver--design-phase-3-widgets-md-cfd8.json  driver--design-phase-4a-render-md-0c67.json  driver--design-phase-4b-web-md-bbdc.json  driver--design-phase-5-platform-md-460e.json  driver--design-phase-6-facade-examples-md-fc82.json  driver--design-phase-7-hot-reload-cli-md-744f.json
issues/00df100e-c523-4085-aafc-038b89ea2af0/: issue.json
issues/0420c563-b485-49f0-b7c5-62cf472c5bfa/: issue.json
issues/05a402a5-c1e9-418a-ac82-af355556f29c/: issue.json
issues/06184d6c-0841-435b-a1b8-efaab04f90d0/: issue.json
issues/06a9ceb9-c15d-48f0-acb0-d589ca0aea5b/: issue.json
issues/0b3c6194-aad6-4a87-8e04-0363703e8760/: issue.json
issues/0b48a99c-caeb-49f5-a181-332f7c5f3846/: issue.json
issues/0bedf253-3aa3-4b67-abec-4c77f8c4e4d0/: issue.json
issues/0c57e22c-5460-47ea-930e-d77db6e37973/: issue.json
issues/0cd8fc48-c3c8-4845-956b-01b50ae82b36/: issue.json
issues/0d2fa978-bbb2-46b6-96b4-2c7f485aeaa2/: issue.json
issues/0d3e8eff-05b3-48d6-9f38-72c2bedfff5f/: issue.json
issues/11a1c9a8-aae9-4da7-b1cf-cea1d5297ad0/: issue.json
issues/157af4ca-d4f2-46a9-b82c-e81664f2a227/: issue.json
issues/15923a44-9064-44a8-b79d-b17efebac9f5/: issue.json
issues/169ac2ef-bbf9-4433-a70a-59d17fcbca48/: issue.json
issues/17279928-7da1-4339-bc44-eac2fdcd1350/: issue.json
issues/194491b0-1eac-484e-a53d-42f723356f36/: issue.json
issues/1ce785a7-34d6-4fc7-95dd-1b01613bff95/: issue.json
issues/1d71c312-9cbb-40f8-9c34-ab0e90a01c2f/: issue.json
issues/1f92aae2-c455-4146-959c-408481566c25/: issue.json
locks/: 10.json  11.json  12.json  13.json  14.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
meta/: counters.json
tools/vitreous-cli/: Cargo.toml
tools/vitreous-cli/src/: main.rs
(+390 files in other folders)
