[package]
name = "vitreous_web"
version = "0.1.0"
edition = "2024"

[dependencies]
vitreous_reactive = { path = "../vitreous_reactive" }
vitreous_widgets = { path = "../vitreous_widgets" }
vitreous_layout = { path = "../vitreous_layout" }
vitreous_a11y = { path = "../vitreous_a11y" }
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
