[package]
name = "vitreous_web"
version = "0.1.0"
edition = "2024"

[dependencies]
vitreous_reactive = { path = "../vitreous_reactive" }
vitreous_widgets = { path = "../vitreous_widgets" }
vitreous_layout = { path = "../vitreous_layout" }
vitreous_a11y = { path = "../vitreous_a11y" }
vitreous_style = { path = "../vitreous_style" }
vitreous_events = { path = "../vitreous_events" }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "FocusEvent",
    "Headers",
    "History",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MouseEvent",
    "Node",
    "NodeList",
    "PopStateEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "DomRect",
    "Storage",
    "Url",
    "WheelEvent",
    "Window",
    "CssStyleDeclaration",
]
